networkpolicy/networkpolicy__basic_kafka_setup__mongodb__all__mongodb__ingress__ports__mongodb__nr60__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb--all--mongodb--ingress--ports--mongodb--nr60
  namespace: mongodb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: mongodb
